refactor: refactor test